Added update for the work of the day

--- a/index.html
+++ b/index.html
@@ -9,12 +9,25 @@
 
         <link rel="stylesheet" href="./styles.css">
         <link rel="shortcut icon" type="image/png" href="./resource/favicon.jpg">
+
     </head>
 
     <body>
         
-        <div class="bg-image"></div>
-        
+        <header>
+            <h2 class="main-title">Let's Drum</h2> 
+            <div class="gradient-buffer">|</div>
+        </header>
+
+        <main>
+            <span>A</span>
+            <span>S</span>
+            <img class="bg-image" src="./resource/background.png" alt="Background image"/>
+            <span>H</span>
+            <span>J</span>
+            <div>space</div>
+        </main>
+
         <footer>
             <div>Designed by Kartik Gupta.</div>
         </footer>
