--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Kartik Gupta">
+        <meta name=”robots” content=”index, follow”>
+        <meta name="description" content="Try relaxing yourself with beats of Let's Drum">
+
         
         <title>Let's Drum</title>
 
@@ -20,17 +24,48 @@
         </header>
 
         <main>
-            <span>A</span>
-            <span>S</span>
-            <img class="bg-image" src="./resource/background.png" alt="Background image"/>
-            <span>H</span>
-            <span>J</span>
-            <div>space</div>
+
+            <div class="key-l playing"><kbd>A</kbd></div>
+            <div class="key-l"><kbd>S</kbd></div>
+            <div class="key-l"><kbd>D</kbd></div>
+            <div class="key-l"><kbd>F</kbd></div>
+
+            <img id="bg-image" src="resource/background.png" alt="background image"/>
+
+            <div class="key-r"><kbd>L</kbd></div>
+            <div class="key-r"><kbd>J</kbd></div>
+            <div class="key-r"><kbd>K</kbd></div>
+            <div class="key-r"><kbd>H</kbd></div>
+
+            <div class="key-space"><kbd>SPACE</kbd></div>
+
         </main>
 
         <footer>
-            <div>Designed by Kartik Gupta.</div>
+            <div class="footer-text-credits">
+                Developed by Kartik Gupta.
+            </div>
+
+            <div>
+                <a href="https://www.linkedin.com/in/thisiskartikgupta" target="_blank"> <img src="./resource/linkedin.png" width="30" height="30" alt="Linkedin Profile URL"/></a>
+                <a href="https://www.github.com/thisiskartikgupta" target="_blank"> <img src="./resource/logo_github.png" width="32" height="32" alt="Github Profile URL"/></a>
+                <a href="mailto:thisiskartikgupta@gmail.com" target="_blank"> <img src="./resource/email.png" width="30" height="30" alt="Mail Address"/></a>
+            </div>
+
+            <div class="footer-text">
+                The work is licensed under Creative Commons Zero v1.0 Universal
+                <a href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank"><img src="resource/cczero.png" height="25" width="25" /></a>
+            </div>
+
+            <div class="footer-text">
+                The site is hosted with  
+                <a href="https://pages.github.com/"> <img src="./resource/githubpages.png" width="80" height="17" alt="Github Pages"/></a>
+            </div>
+
         </footer>
+
+        <script src="./script.js"></script>
+
     </body>
 
 </html>
